--- a/package.json
+++ b/package.json
@@ -1,55 +1,23 @@
 {
-  "name": "the-helping-hands",
-  "version": "0.1.0",
+  "name": "rest-api",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.25.0",
-    "bcrypt": "^5.0.1",
-    "dotenv": "^15.0.0",
-    "express": "^4.17.2",
-    "helmet": "^5.0.2",
-    "mongoose": "^6.1.9",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "nodemon": "^2.0.15",
-    "path": "^0.12.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "timeago.js": "^4.0.2",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start:backend": "nodemon index.js",
-    "start:frontend": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start:backend": "nodemon index.js"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "mongoose": "^5.12.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7"
   }
 }
