--- a/client/package.json
+++ b/client/package.json
@@ -21,14 +21,14 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^5.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start:backend": "nodemon index.js",
     "start:frontend": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,5 +51,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3000/api"
+  
 }
