--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:": "nodemon index.js"
+    "start:backend": "nodemon index.js"
+   
   },
   "author": "",
   "license": "ISC",
@@ -20,4 +21,5 @@
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
   }
+  
 }
